[Performance Panel] Fix  values are overlapping with the header values in datagrid
Screencast: https://screencast.googleplex.com/cast/NTkyNDI3NzYzODM5Nzk1Mnw0YzhhMjg1MS0zNw
Bug: 1481479

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -418,6 +418,7 @@
 
 .timeline-tree-view .data-grid thead {
   height: 21px;
+  z-index: 99999;
 }
 
 .timeline-stack-view-header {
